change manifest org

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "repos": [
     {
       "id": "inventory",
-      "organisation": "talvasconcelos",
+      "organisation": "lnbits",
       "repository": "inventory"
     }
   ]
